# HGMS-hIgG-separation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
python/: HGMS_hIgG_separation.py  animate_complete_y_vector.py  animate_unit_operations.py  plot_a_eff_function.py  plot_eigenvalues_jacobian_reactionsystem.py  plot_fractions.py  plot_gouy_chapman_f_vs_sigma.py  plot_hyperparameter_heatmap.py  plot_hyperparameter_overview.py  plot_langmuir_parameters.py  plot_pH.py  plot_rate_damping_comparison.py  plot_time-or-cell_comp_2D_array.py  plot_time_step_sizes.py  shared_data.py
scripts/: build.sh  recompile.sh
src/: HGMS_hIgG_separation.cpp  HGMS_hIgG_separation_hyperparameter_search.cpp  HGMS_hIgG_separation_shared.hpp  Interpolators.tpp  hyperparameter_grid_search.cpp  main_run.cpp
